[webui] Fix interpretation bar spacing and button sizing

--- a/src/webui/src/sass/_general-layout.scss
+++ b/src/webui/src/sass/_general-layout.scss
@@ -41,8 +41,10 @@ button { font-family: $full !important; font-size: 1.2rem; font-weight: 500; lin
 .modal-lg { width: inherit; }
 .modal-backdrop { bottom: 0; position: fixed; }
 .interpretation-bar { margin: 3.9vh 0; display: flex; justify-content: flex-end;
+  button { white-space: nowrap; }
   input { width: 20rem; }
   .left { margin-right: auto; }
+  interpretation-button { display: flex; }
   button ~ button, button ~ interpretation-button  { margin-left: 1.3rem; }
 }
 .no-alleles, .no-results { height: calc(100vh - 19rem); display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center;
